--- a/haskell-terminfo/repos/extra-i686/PKGBUILD
+++ b/haskell-terminfo/repos/extra-i686/PKGBUILD
@@ -3,12 +3,12 @@
 _hkgname=terminfo
 pkgname=haskell-terminfo
 pkgver=0.3.1.3
-pkgrel=2.1
+pkgrel=2.2
 pkgdesc="Haskell bindings to the terminfo library."
 url="http://hackage.haskell.org/cgi-bin/hackage-scripts/package/terminfo"
 license=('custom:BSD3')
 arch=('i686' 'x86_64')
-depends=('ghc=6.12.3' 'haskell-extensible-exceptions=0.1.1.2' sh)
+depends=('ghc=6.12.3' sh)
 options=('strip')
 source=(http://hackage.haskell.org/packages/archive/terminfo/$pkgver/terminfo-$pkgver.tar.gz)
 install=${pkgname}.install
