--- a/kdeaccessibility/kde-unstable/PKGBUILD
+++ b/kdeaccessibility/kde-unstable/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=('kdeaccessibility-colorschemes'
          'kdeaccessibility-kmag'
          'kdeaccessibility-kmousetool'
          'kdeaccessibility-kmouth')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://accessibility.kde.org'
@@ -18,8 +18,8 @@ license=('GPL' 'FDL')
 groups=('kde' 'kdeaccessibility')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime'
         'speech-dispatcher' 'docbook-xsl')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('edd7b780be88d15f89d6686ed4e7d583fb259117')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('d15e366b3ba9d6cd9be38bb7b5e8d1edae858a9d')
 
 build() {
 	cd ${srcdir}
