--- a/kdegames/kde-unstable/PKGBUILD
+++ b/kdegames/kde-unstable/PKGBUILD
@@ -43,7 +43,7 @@ pkgname=('kdegames-bomber'
          'kdegames-libkmahjongg'
          'kdegames-lskat'
          'kdegames-palapeli')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -51,8 +51,8 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdegames')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'ggz-client-libs'
 	'twisted' 'kdebindings-python' 'docbook-xsl')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('4d75cc3c5746e53763e6f59bb8319cff1fd099ac')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('19450f38c66674944966f221660a5aeda80a1eb1')
 
 build() {
 	cd $srcdir
