--- a/kde-unstable/PKGBUILD
+++ b/kde-unstable/PKGBUILD
@@ -72,7 +72,7 @@ pkgname=('kdeplasma-addons-applets-bball'
          'kdeplasma-addons-wallpapers-pattern'
          'kdeplasma-addons-wallpapers-virus'
          'kdeplasma-addons-wallpapers-weather')
-pkgver=4.5.95
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -80,8 +80,8 @@ license=('GPL' 'LGPL')
 groups=('kde' 'kdeplasma-addons')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-workspace' 'kdegraphics-libs'
 	'kdeedu-marble' 'eigen' 'scim' 'qwt' 'docbook-xsl' 'boost')
-source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('abffc4539e12f3e75ff98395c723bfd074f118e7')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('d266ca34c293743a64362b063ab58f671e7c1777')
 
 build() {
         cd ${srcdir}
