--- a/ffmpeg/trunk/PKGBUILD
+++ b/ffmpeg/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Paul Mattal <paul@archlinux.org>
 
 pkgname=ffmpeg
-pkgver=26387
+pkgver=20110121
 pkgrel=1
 pkgdesc="Complete and free Internet live audio and video broadcasting solution for Linux/Unix"
 arch=('i686' 'x86_64')
@@ -12,11 +12,11 @@ url="http://ffmpeg.org/"
 license=('GPL')
 depends=('bzip2' 'lame' 'sdl' 'libvorbis' 'faac' 'xvidcore' 'zlib' 'x264' 'libtheora' 'opencore-amr' 'alsa-lib' 'libvdpau' 'libxfixes' 'schroedinger' 'libvpx' 'libva' 'openjpeg')
 makedepends=('yasm')
-#remake snapshot with: svn export svn://svn.ffmpeg.org/ffmpeg/trunk/@25472
+#git clone git://git.ffmpeg.org/ffmpeg.git
 source=(ftp://ftp.archlinux.org/other/ffmpeg/ffmpeg-${pkgver}.tar.xz)
 options=('force')
 #source=(http://ffmpeg.org/releases//releases/ffmpeg-${pkgver}.tar.bz2)
-md5sums=('02be9ac7cd09ca20d928740357c3f488')
+md5sums=('73080643ae7702d4164da92b9e6fedb6')
 
 build() {
   cd "$srcdir/$pkgname"
