--- a/xfce4-diskperf-plugin/trunk/PKGBUILD
+++ b/xfce4-diskperf-plugin/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Aurelien Foret <orelien@chez.com>
 
 pkgname=xfce4-diskperf-plugin
-pkgver=2.2.0
+pkgver=2.3.0
 pkgrel=1
 pkgdesc="Plugin for the Xfce4 panel displaying instant disk/partition performance"
 arch=('i686' 'x86_64')
 license=('custom')
 url="http://goodies.xfce.org/projects/panel-plugins/xfce4-diskperf-plugin"
 groups=('xfce4-goodies')
-depends=('xfce4-panel' 'libxfcegui4' 'libxfce4ui')
+depends=('xfce4-panel' 'libxfcegui4') # 'libxfce4ui')
 makedepends=('intltool')
-source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/2.2/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('e970158fcac5b58bdc1539bc84d7b5ec')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/2.3/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('c6ece8123c762ee203cbc6fd5450b503')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
@@ -27,6 +27,7 @@ build() {
 }
 
 package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
   install -Dm644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING
 }
