--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgname=thunar-archive-plugin
 pkgver=0.2.4
-pkgrel=6
+pkgrel=7
 pkgdesc="create and deflate archives in thunar"
 arch=(i686 x86_64)
 license=('GPL2')
-url="http://xfce-goodies.berlios.de/"
+url="http://goodies.xfce.org/projects/thunar-plugins/thunar-archive-plugin"
 groups=('xfce4-goodies')
-depends=('thunar')
-makedepends=('intltool' 'pkgconfig')
+depends=('thunar>=1.2.0')
+makedepends=('intltool')
 options=('!libtool')
 install=${pkgname}.install
 source=(http://download.berlios.de/xfce-goodies/${pkgname}-${pkgver}.tar.bz2)
@@ -18,8 +18,17 @@ md5sums=('4c389e6328af9322937af76382f0baec')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
-    --localstatedir=/var --disable-static
-  make || return 1
+  # thunar 1.2 hack
+  sed -i "s/thunarx\-1/thunarx\-2/g" configure
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib/xfce4 \
+	--localstatedir=/var \
+	--disable-static
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
 }
