--- a/nvidia/trunk/PKGBUILD
+++ b/nvidia/trunk/PKGBUILD
@@ -2,14 +2,14 @@
 # Maintainer : Thomas Baechler <thomas@archlinux.org>
 
 pkgname=nvidia
-pkgver=260.19.29
-_kernver='2.6.37-ARCH'
-pkgrel=2
+pkgver=260.19.36
+_kernver='2.6.36-ARCH'
+pkgrel=1
 pkgdesc="NVIDIA drivers for kernel26."
 arch=('i686' 'x86_64')
 url="http://www.nvidia.com/"
-depends=('kernel26>=2.6.37' 'kernel26<2.6.38' "nvidia-utils=${pkgver}")
-makedepends=('kernel26-headers>=2.6.37' 'kernel26-headers<2.6.38')
+depends=('kernel26>=2.6.36' 'kernel26<2.6.37' "nvidia-utils=${pkgver}")
+makedepends=('kernel26-headers>=2.6.36' 'kernel26-headers<2.6.37')
 conflicts=('nvidia-96xx' 'nvidia-173xx')
 license=('custom')
 install=nvidia.install
@@ -17,13 +17,13 @@ install=nvidia.install
 if [ "$CARCH" = "i686" ]; then
 	_arch='x86'
 	_pkg="NVIDIA-Linux-${_arch}-${pkgver}"
-	source=("http://us.download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-        md5sums=('e982a05a85c68130acfe1d48086250e3')
+        source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
+        md5sums=('2826484d87827351774449382e45c4a9')
 elif [ "$CARCH" = "x86_64" ]; then
 	_arch='x86_64'
 	_pkg="NVIDIA-Linux-${_arch}-${pkgver}-no-compat32"
-	source=("http://us.download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-        md5sums=('0583668d86f7318d99def3ed3e1cc4bc')
+        source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
+        md5sums=('6ebc5db9066e920b0b0e48377ce5eeb5')
 fi
 
 build() {
