--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=qscintilla
 pkgname=('qscintilla' 'python-qscintilla')
 pkgver=2.4.6
-pkgrel=4
+pkgrel=5
 license=('GPL')
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.co.uk/software/qscintilla/intro"
@@ -17,7 +17,7 @@ md5sums=('424a89736b900e6ca5bc6d929cdafaf8'
 
 
 build() {
-    cd $srcdir/QScintilla-gpl-$pkgver
+    cd "${srcdir}/QScintilla-gpl-${pkgver}" 
     patch -Np1 -i "${srcdir}/configure.py-objdir-support.diff"
 
     cd Qt4
@@ -37,17 +37,11 @@ package_qscintilla() {
     pkgdesc="A port to Qt4 of Neil Hodgson's Scintilla C++ editor class"
     depends=('qt')
 
-    cd ${srcdir}/QScintilla-gpl-${pkgver}/Qt4
+    cd "${srcdir}/QScintilla-gpl-${pkgver}/Qt4"
     make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
 
-    cd ${srcdir}/QScintilla-gpl-${pkgver}/designer-Qt4
+    cd "${srcdir}/QScintilla-gpl-${pkgver}/designer-Qt4"
     make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
-    
-    cd ${srcdir}/QScintilla-gpl-${pkgver}/Python
-    make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
-
-    # Provided by python-qscintilla
-    rm ${pkgdir}/usr/lib/python3.1/site-packages/PyQt4/Qsci.so
 }
 
 package_python-qscintilla() {
@@ -56,5 +50,5 @@ package_python-qscintilla() {
 
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
     install -Dm755 Qsci.so \
-      ${pkgdir}/usr/lib/python3.1/site-packages/PyQt4/Qsci.so
+      "${pkgdir}/usr/lib/python3.1/site-packages/PyQt4/Qsci.so"
 }
