--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -46,7 +46,7 @@ package_qscintilla() {
 
 package_python-qscintilla() {
     pkgdesc="Python 3 bindings for QScintilla2"
-    depends=('qscintilla' 'python-qt')
+    depends=('python-qt' 'python2-qscintilla')
 
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
     install -Dm755 Qsci.so \
