--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=moc
 pkgver=2.4.4
-pkgrel=2
+pkgrel=3
 pkgdesc="An ncurses console audio player with support for the mp3, ogg, and wave formats"
 arch=('i686' 'x86_64')
 url="http://moc.daper.net/"
@@ -26,18 +26,19 @@ sha1sums=('e56ee13aa17c177f0afc42efe3804ebbbf46d4db')
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
 
-	sed -i 's|ffmpeg/avformat.h|libavformat/avformat.h|' decoder_plugins/ffmpeg/ffmpeg.c || return 1
+	sed -i 's|ffmpeg/avformat.h|libavformat/avformat.h|' decoder_plugins/ffmpeg/ffmpeg.c
+	sed -i 's|avcodec_decode_audio|avcodec_decode_audio2|' decoder_plugins/ffmpeg/ffmpeg.c
 	# Disabling aac to use the external ffmpeg to play them (FS#13164)
 	./configure --prefix=/usr --without-rcc --without-aac \
 	    --with-oss  --with-alsa  --with-jack --with-mp3 \
 	    --with-musepack --with-vorbis --with-flac --with-wavpack \
 	    --with-sndfile --with-modplug --with-ffmpeg --with-speex \
-	    --with-samplerate --with-curl || return 1
-	make || return 1
+	    --with-samplerate --with-curl
+	make
 }
 
 package() {
 	cd ${srcdir}/${pkgname}-${pkgver}
 
-	make DESTDIR=${pkgdir} install || return 1
+	make DESTDIR=${pkgdir} install
 }
