--- a/di/trunk/PKGBUILD
+++ b/di/trunk/PKGBUILD
@@ -1,10 +1,8 @@
 # $Id$
-# Contributor: Eric Belanger <eric@archlinux.org>
-# Contributor: Tom Newsom <Jeepster@gmx.co.uk>
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=di
-pkgver=4.26
+pkgver=4.27
 pkgrel=1
 pkgdesc="A disk information utility, displaying everything (and more) that your df command does"
 arch=('i686' 'x86_64')
@@ -13,17 +11,16 @@ license=('ZLIB')
 depends=('glibc')
 options=('!makeflags')
 source=(http://www.gentoo.com/di/${pkgname}-${pkgver}.tar.gz)
-md5sums=('7568e18b1c5c72bfbe3d9ba55c30d1ed')
+md5sums=('b1a7ee87b83d72c273558a5ec815bfc3')
+sha1sums=('a079258f2a6d1861c0a42761864d3113b384da97')
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	make || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make
 }
 
 package() {
-	cd ${srcdir}/${pkgname}-${pkgver}
-	make prefix=${pkgdir}/usr install || return 1
-	ln -sf di ${pkgdir}/usr/bin/mi
-	install -Dm644 LICENSE \
-		${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make INSTALL_DIR="${pkgdir}/usr" install
+  install -D -m644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
