--- a/martian/trunk/PKGBUILD
+++ b/martian/trunk/PKGBUILD
@@ -4,24 +4,25 @@
 
 pkgname=martian
 pkgver=20080625
-pkgrel=13
+pkgrel=14
 pkgdesc="Alternative driver for the Agere Systems PCI WinModem."
 arch=('i686')
 url="http://martian.barrelsoutofbond.org/"
 license=("GPL" "custom:Agere Systems WinModem License")
-depends=('kernel26>=2.6.36' 'kernel26<2.6.37' 'martian-utils')
-makedepends=('kernel26-headers>=2.6.36' 'kernel26-headers<2.6.37')
+depends=('kernel26>=2.6.37' 'kernel26<2.6.38' 'martian-utils')
+makedepends=('kernel26-headers>=2.6.37' 'kernel26-headers<2.6.38')
 replaces=('ltmodem')
 options=(!strip)
 install=martian.install 
 source=(http://linmodems.technion.ac.il/packages/ltmodem/kernel-2.6/martian/martian-full-${pkgver}.tar.gz)
-_kernver=2.6.36-ARCH
+_kernver=2.6.37-ARCH
                   
 build() { 
   cd $startdir/src/martian-full-$pkgver
-  #patch -Np1 -i ../fastcall.patch || return 1
-  #patch -Np1 -i ../stringify.patch || return 1
-  make KERNEL_DIR=/usr/src/linux-${_kernver} all || return 1
+  make KERNEL_DIR=/usr/src/linux-${_kernver} all
+}
+
+package() { 
   install -D -m644 $startdir/src/martian-full-$pkgver/kmodule/martian_dev.ko $startdir/pkg/lib/modules/${_kernver}/kernel/drivers/net/martian_dev.ko
   install -D -m644 $startdir/src/martian-full-$pkgver/modem/ASWMLICENSE $startdir/pkg/usr/share/licenses/$pkgname/LICENSE
 }  
