--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,6 +11,7 @@ url="http://geeqie.sourceforge.net/"
 license=('GPL3')
 depends=('exiv2' 'gtk2' 'lcms')
 makedepends=('intltool')
+optdepends=('librsvg: SVG rendering')
 replaces=('gqview-devel')
 source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('1d67ef990390224c5052697d93bb49c0')
