--- a/initscripts/trunk/PKGBUILD
+++ b/initscripts/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 # Maintainer: Aaron Griffin <aaron@archlinux.org>
 
 pkgname=initscripts
-pkgver=2010.07
-pkgrel=2
+pkgver=2011.01
+pkgrel=1
 pkgdesc="System initialization/bootup scripts"
 arch=('i686' 'x86_64')
 url="http://www.archlinux.org"
-license=('GPL')
+license=('GPL2')
 groups=('base')
 backup=(etc/inittab etc/rc.conf etc/rc.local etc/rc.local.shutdown etc/conf.d/wireless)
 depends=('bash' 'awk' 'grep' 'coreutils' 'sed' 'udev'
@@ -17,13 +17,13 @@ optdepends=('bridge-utils: Network bridging support'
             'dhcpcd: DHCP network configuration'
             'wireless_tools: Wireless networking')
 install=initscripts.install
-source=("ftp://ftp.archlinux.org/other/initscripts/${pkgname}-${pkgver}-1.tar.xz"
+source=("ftp://ftp.archlinux.org/other/initscripts/${pkgname}-${pkgver}-${pkgrel}.tar.xz"
         'wireless.conf.d')
-md5sums=('0cea15a64d999d0e1aa0c4bb4dbd1af8'
-         '027576534885b8d5dded9be546057b12')
+sha256sums=('d69510d562d387c3ecbab69b412c41c24da17a23771625a7cd71810eeed067e0'
+            '0eba4250b07e0a727ef64772f5ee9027b123cbd4bb0894ba2842f545035c827f')
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}-1
+  cd ${srcdir}/${pkgname}-${pkgver}-${pkgrel}
   DESTDIR=${pkgdir} ./install.sh
   install -D -m644 ${srcdir}/wireless.conf.d ${pkgdir}/etc/conf.d/wireless
 }
