--- a/kdebase-workspace/kde-unstable/PKGBUILD
+++ b/kdebase-workspace/kde-unstable/PKGBUILD
@@ -27,16 +27,18 @@ backup=('usr/share/config/kdm/kdmrc'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kdm-zsh-profile.patch' 'kdm' 'kde.pam' 'kde-np.pam' 'kscreensaver.pam'
         'fixpath.patch' 'terminate-server.patch'
-        'set-horos-theme.patch')
-sha1sums=('ec010d2b1c3b584b30a76b792d58f4a0f15f322a'
+        'set-horos-theme.patch'
+        'fix-MALLOC_CHECK.patch')
+sha1sums=('c192f712d16617e625acc84fcd9e0546df887a70'
           '8c2bdefb23a03b753b78d16944d03fa3939d2d99'
           '5db3a245201bd4a50e65aa2ef583cf5490e4f646'
           'f7b38af38549242a240f1a90ab9964ca8a366129'
           '603cc79c4d2b4eae62bb5f244aeecb3a778b5516'
           '106635aa1aae51d6f0668b1853f6c49a4fe9d3d8'
           'd7b5883f7e65c6839b1f65f94d58026673dd0226'
-          'c192f712d16617e625acc84fcd9e0546df887a70'
-          'd1f74ba2c7e2580d32b16ab88b0e6e804951e663')
+          'ac7bc292c865bc1ab8c02e6341aa7aeaf1a3eeee'
+          'd1f74ba2c7e2580d32b16ab88b0e6e804951e663'
+          'd8d6ac7f1b25a30fdd0d6a182e2ac6c6f2a28cd7')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
@@ -46,6 +48,7 @@ build() {
 
     # Already fixed upstream
     patch -Np0 -i ${srcdir}/set-horos-theme.patch
+    patch -Np0 -i ${srcdir}/fix-MALLOC_CHECK.patch
 
 	cd ${srcdir}
 	mkdir build
