--- a/kdelibs/trunk/PKGBUILD
+++ b/kdelibs/trunk/PKGBUILD
@@ -3,22 +3,24 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdelibs
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
-depends=('shared-mime-info' 'hal' 'xz' 'enchant' 'jasper' 'openexr' 'giflib'
-         'strigi' 'libxtst' 'soprano' 'ca-certificates' 'xdg-utils' 'qca' 'polkit-qt'
-         'libxss' 'phonon' 'shared-desktop-ontologies' 'attica' 'libxcursor' 'libdbusmenu-qt'
-	 'hicolor-icon-theme')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'intltool' 'avahi' 'libgl' 'hspell' 'docbook-xsl')
+depends=('strigi' 'attica' 'libxss' 'xz' 'openssl' 'soprano' 'heimdal'
+        'shared-desktop-ontologies' 'qca' 'libdbusmenu-qt' 'polkit-qt' 'grantlee'
+        'shared-mime-info' 'enchant' 'giflib' 'jasper' 'openexr' 'xdg-utils'
+        'phonon' 'hicolor-icon-theme' 'upower' 'udisks' 'libxcursor')
+optdepends=('docbook-xsl: needed by meinproc4 to build doc')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'intltool' 'avahi' 'libgl' 'hspell'
+        'docbook-xsl')
 replaces=('arts' 'kdelibs-experimental')
 install='kdelibs.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kde-applications-menu.patch' 'archlinux-menu.patch' 'abs-syntax-highlight.patch')
-sha1sums=('127a2b50fe31ff345e05660dd50f7c55ae78d854'
+sha1sums=('6ea3fc69f98fa91c5159ccd743d4d548e801c7bc'
           '86ee8c8660f19de8141ac99cd6943964d97a1ed7'
           '63a850ab4196b9d06934f2b4a13acd9f7739bc67'
           'd994f262356af5b9e4e9619646e471bd98c91efb')
