--- a/kdebase-runtime/trunk/PKGBUILD
+++ b/kdebase-runtime/trunk/PKGBUILD
@@ -3,24 +3,25 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebase-runtime
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 pkgdesc="KDE Base Runtime Environment"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
-depends=('kdelibs' 'oxygen-icons' 'xorg-xauth' 'hicolor-icon-theme'
-         'smbclient' 'rarian' 'libssh')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdepimlibs' 'openslp'
-             'xine-lib' 'docbook-xsl')
-optdepends=('htdig: to build the search index'
+depends=('kdelibs' 'ntrack' 'smbclient' 'libssh' 'libcanberra' 'oxygen-icons'
+        'xorg-xauth' 'hicolor-icon-theme')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdepimlibs' 'openslp' 'xine-lib'
+        'docbook-xsl')
+optdepends=('htdig: to build the search index in khelpcenter'
+            'rarian: needed by khelpcenter'
             'gdb: drkonq crash handler')
 install="${pkgname}.install"
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-sha1sums=('3827a38727e077a2aef6d63f38e68ec72bd01a84')
+sha1sums=('024b7035a410f7c08e501ea1250553e746a469d2')
 
 build() {
-    cd ${srcdir}
+	cd ${srcdir}
 	mkdir build
 	cd build
 	cmake ../${pkgname}-${pkgver} \
