--- a/kdegraphics/trunk/PKGBUILD
+++ b/kdegraphics/trunk/PKGBUILD
@@ -12,20 +12,20 @@ pkgname=('kdegraphics-gwenview'
          'kdegraphics-ksnapshot'
          'kdegraphics-libs'
          'kdegraphics-okular')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdegraphics')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'poppler-qt'
-	'libspectre' 'sane' 'chmlib' 'djvulibre' 'lcms' 'qimageblitz' 'ebook-tools'
-	'libxxf86vm' 'docbook-xsl')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'qimageblitz' 'sane' 'lcms'
+        'libxxf86vm' 'poppler-qt' 'libspectre' 'chmlib' 'djvulibre'
+        'ebook-tools' 'kdebase-runtime' 'docbook-xsl')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('7e7c81ac691aacbfea6c1e1860cd098294bf5e15')
+sha1sums=('bef8ebfa33f66405975e4e1b5c327fa144c3e40e')
 
 build() {
-    cd ${srcdir}
+	cd ${srcdir}
 	mkdir build
 	cd build
 	cmake ../${pkgbase}-${pkgver} \
@@ -102,7 +102,7 @@ package_kdegraphics-kruler() {
 
 package_kdegraphics-ksnapshot() {
 	pkgdesc='Screen Capture Program'
-	depends=('kdebase-runtime')
+	depends=('kdebase-runtime' 'kdegraphics-libs')
 	url="http://kde.org/applications/graphics/ksnapshot/"
 	install='kdegraphics.install'
 	cd $srcdir/build/ksnapshot
@@ -131,13 +131,11 @@ package_kdegraphics-libs() {
 package_kdegraphics-okular() {
 	pkgdesc='Document Viewer'
 	depends=('kdebase-runtime' 'qimageblitz' 'poppler-qt' 'chmlib' 'djvulibre'
-		'libspectre' 'ebook-tools' 'kdegraphics-libs')
+		'ebook-tools' 'libspectre')
 	url="http://kde.org/applications/graphics/okular/"
 	install='kdegraphics.install'
 	cd $srcdir/build/okular
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/okular
 	make DESTDIR=$pkgdir install
-	install -D -m644 $srcdir/${pkgbase}-${pkgver}/cmake/modules/FindOkular.cmake \
-		$pkgdir/usr/share/apps/cmake/modules/FindOkular.cmake
 }
