--- a/kdebindings/trunk/PKGBUILD
+++ b/kdebindings/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# $Id: PKGBUILD 59825 2009-11-28 01:40:17Z andrea $
+# $Id: PKGBUILD 107102 2011-01-21 11:16:03Z andrea $
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
@@ -7,25 +7,18 @@ pkgname=('kdebindings-csharp'
          'kdebindings-python'
          'kdebindings-ruby'
          'kdebindings-smoke')
-pkgver=4.5.5
-pkgrel=2
+pkgver=4.6.0
+pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'python2-qt' 'kdepim-runtime' 'mono'
 	'kdegraphics-okular' 'qwt' 'docbook-xsl' 'boost' 'qscintilla' 'ruby')
-source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
-        'sip4.11.2.patch'
-        'sip4.12.patch')
-sha1sums=('5f754f0b6989df9557c5ccec18b4f96207fceb94'
-          '36b52d147fee24a65c756baaad00e3d1ac081d3d'
-          '59b3992de8def0e415a055246d2d3d0a2934d8d9')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
+sha1sums=('a2d641bbee7fddfbd76652fb41cd784d8c92288c')
 
 build() {
 	cd ${srcdir}/${pkgbase}-${pkgver}
-
-	patch -Np0 -i ${srcdir}/sip4.11.2.patch
-	patch -Np1 -i ${srcdir}/sip4.12.patch
 
 	# fix ruby
 	for f in `find ruby -name CMakeLists.txt`; do
@@ -41,7 +34,6 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_falcon=OFF \
 		-DBUILD_java=OFF \
-        -DBUILD_perl=OFF \
 		-DBUILD_php=OFF \
 		-DWITH_PolkitQt=OFF
 	make
